# Fraud-Transaction-Detection

./: .env  .gitattributes  README.md  app.py  main.py  push_data.py  pyproject.toml  test_mongodb.py
FraudTransactionDetection/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
FraudTransactionDetection/constants/training_pipeline/: __init__.py
FraudTransactionDetection/entity/: artifact_entity.py  config_entity.py
FraudTransactionDetection/exception/: exception.py
FraudTransactionDetection/logging/: logger.py
FraudTransactionDetection/pipeline/: training_pipeline.py
FraudTransactionDetection/utils/main_utils/: utils.py
FraudTransactionDetection/utils/ml_utils/metric/: classification_metric.py
FraudTransactionDetection/utils/ml_utils/model/: estimator.py
data_schema/: schema.yaml
notebooks/: experiments.ipynb
