[project]
name = "fraudtransactionprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.8.3",
    "dagshub>=0.6.3",
    "fastapi>=0.116.1",
    "mlflow>=3.2.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyaml>=25.7.0",
    "pymongo[srv]>=4.14.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
]
